/*
 * $Id: ChangeLog,v 1.1143 2003/06/19 18:29:43 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-06-19 12:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    + Added | DISPATCH_METHOD to DISPATCH_PROPERTYPUTREF

2003-06-19 11:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    ! Fixed a real small typo that caused a HUGE problem.

2003-06-19 10:40 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/strpeek.c
    * Fixed missing type cast

2003-06-18 21:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added missing initialization of Block.item.asBlock.value->uLen in HB_RestoreBlock()

  * source/rtl/traceprg.prg
    * Minor optimization.

  * source/rtl/persist.prg
    + Added generation of a Version Header (2.0).
    + Added logic to be backward compatible with Harbour original persitence files.

2003-06-19 04:16 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/makefile.bc
  * xharbour/makefile.nt
  * xharbour/makefile.vc
    * added strpeek.c

  * xharbour/include/hbextern.ch
    * temporary removed HB_SETDISPCP

  * xharbour/include/hbapicdp.h
  * xharbour/source/rdd/dbcmd.c
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    * added checking for HB_CDP_SUPPORT_OFF macro

2003-06-19 01:00 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/Makefile
  * xharbour/include/hbsetup.ch
  + xharbour/source/rtl/strpeek.c
    + FlagShip strpeek/strpoke function added

  * xharbour/source/rtl/gtnul/Makefile
  * xharbour/source/rtl/gtnul/gtnul.c
  + xharbour/source/rtl/gtnul/gtext.c
  * xharbour/include/hbapigt.h
  * xharbour/include/hbextern.h
  * xharbour/source/rtl/gtcrs/gtcrs.c
  * xharbour/source/rtl/gtcrs/gtcrs.h
  + xharbour/tests/dspchr.prg
    + new function: