@@ -1,5 +1,5 @@
 /*
- * $Id: hvm.c,v 1.211 2003/06/18 13:29:12 andijahja Exp $
+ * $Id: hvm.c,v 1.212 2003/06/19 04:55:54 ronpinkas Exp $
  */
 
 /*
@@ -213,11 +213,9 @@ extern HARBOUR  hb___msgSetData( void );
 extern PCLASS   hb_clsClassesArray( void );
 extern void hb_clsSetModule( USHORT uiClass );
 
-#ifdef __PROFILER__
 BOOL hb_bProfiler = FALSE; /* profiler status is off */
 ULONG hb_ulOpcodesCalls[ HB_P_LAST_PCODE ]; /* array to profile opcodes calls */
 ULONG hb_ulOpcodesTime[ HB_P_LAST_PCODE ]; /* array to profile opcodes consumed time */
-#endif
 
 BOOL hb_bTracePrgCalls = FALSE; /* prg tracing is off */
 
@@ -415,7 +413,6 @@ void HB_EXPORT hb_vmInit( BOOL bStartMainProc )
    /* Check for some internal switches */
    hb_cmdargProcessVM();
 
-#ifdef __PROFILER__
    /* Initialize opcodes profiler support arrays */
    {
       ULONG ul;
@@ -426,7 +423,6 @@ void HB_EXPORT hb_vmInit( BOOL bStartMainProc )
          hb_ulOpcodesTime[ ul ] = 0;
       }
    }
-#endif
 
    /* Call functions that initializes static variables
     * Static variables have to be initialized before any INIT functions
@@ -635,10 +631,8 @@ void HB_EXPORT hb_vmExecute( const BYTE * pCode, PHB_SYMB pSymbols, PHB_ITEM **p
    BOOL bCanRecover = FALSE;
    ULONG ulPrivateBase;
    LONG lOffset;
-#ifdef __PROFILER__
    ULONG ulLastOpcode = 0; /* opcodes profiler support */
    ULONG ulPastClock = 0;  /* opcodes profiler support */
-#endif
    USHORT wEnumCollectionCounter = hb_vm_wEnumCollectionCounter;
    USHORT wWithObjectCounter = hb_vm_wWithObjectCounter;
 
@@ -653,10 +647,12 @@ void HB_EXPORT hb_vmExecute( const BYTE * pCode, PHB_SYMB pSymbols, PHB_ITEM **p
    /* NOTE: Initialization with 0 is needed to avoid GCC -O2 warning */
    ulPrivateBase = pSymbols ? hb_memvarGetPrivatesBase() : 0;
 
+   if( hb_bProfiler )
+      ulPastClock = ( ULONG ) clock();
+
    while( pCode[ w ] != HB_P_ENDPROC )
    {
 
-#ifdef __PROFILER__
       if( hb_bProfiler )
       {
          ULONG ulActualClock = ( ULONG ) clock();
@@ -666,7 +662,6 @@ void HB_EXPORT hb_vmExecute( const BYTE * pCode, PHB_SYMB pSymbols, PHB_ITEM **p
          ulLastOpcode = pCode[ w ];
          hb_ulOpcodesCalls[ ulLastOpcode ]++;
       }
-#endif
 
 #ifndef HB_GUI
       if(( hb_set.HB_SET_CANCEL ) || ( hb_set.HB_SET_DEBUG ))
@@ -4623,10 +4618,8 @@ void hb_vmDo( USHORT uiParams )
    PHB_ITEM pSelf;
    PHB_FUNC pFunc;
    BOOL     bDebugPrevState;
-#ifdef __PROFILER__
    ULONG    ulClock = 0;
    BOOL     bProfiler = hb_bProfiler; /* because profiler state may change */
-#endif
    int      iPresetBase = s_iBaseLine;
 
    HB_TRACE(HB_TR_DEBUG, ("hb_vmDo(%hu)", uiParams));
@@ -4645,12 +4638,10 @@ void hb_vmDo( USHORT uiParams )
       return;
    }
 
-#ifdef __PROFILER__
    if( bProfiler )
    {
       ulClock = ( ULONG ) clock();
    }
-#endif
 
    //hb_inkeyPoll();           /* Poll the console keyboard */
 
@@ -4670,13 +4661,10 @@ void hb_vmDo( USHORT uiParams )
 
       if( pFunc )
       {
-
-#ifdef __PROFILER__
          if( bProfiler && pSym->pDynSym )
          {
             pSym->pDynSym->ulRecurse++;
          }
-#endif
 
          if ( hb_bTracePrgCalls )
          {
@@ -4693,7 +4681,6 @@ void hb_vmDo( USHORT uiParams )
 
          HB_TRACE( HB_TR_DEBUG, ("Done: %s", pSym->szName));
 
-#ifdef __PROFILER__
          if( bProfiler && pSym->pDynSym )
          {
             pSym->pDynSym->ulCalls++;                   /* profiler support */
@@ -4705,7 +4692,6 @@ void hb_vmDo( USHORT uiParams )
             }
             pSym->pDynSym->ulRecurse--;
          }
-#endif
       }
       else
       {
@@ -4751,11 +4737,9 @@ void hb_vmSend( USHORT uiParams )
    PHB_ITEM       pSelf;
    PHB_FUNC       pFunc = NULL;
    BOOL           bDebugPrevState;
-#ifdef __PROFILER__
    ULONG          ulClock = 0;
    void           *pMethod = NULL;
    BOOL           bProfiler = hb_bProfiler; /* because profiler state may change */
-#endif
    PHB_BASEARRAY  pSelfBase = NULL;
    BOOL           lPopSuper = FALSE;
    int            iPresetBase = s_iBaseLine;
@@ -4779,12 +4763,10 @@ void hb_vmSend( USHORT uiParams )
       uiParams += hb_vm_aiExtraParams[--hb_vm_iExtraParamsIndex];
    }
 
-#ifdef __PROFILER__
    if( bProfiler )
    {
       ulClock = ( ULONG ) clock();
    }
-#endif
 
    pItem = hb_stackNewFrame( &sStackState, uiParams );   /* procedure name */
    pSym = pItem->item.asSymbol.value;
@@ -4865,13 +4847,10 @@ void hb_vmSend( USHORT uiParams )
 
    if( pFunc )
    {
-
-#ifdef __PROFILER__
       if( bProfiler )
       {
          pMethod = hb_mthRequested();
       }
-#endif
 
       if ( hb_bTracePrgCalls )
       {
@@ -4903,12 +4882,10 @@ void hb_vmSend( USHORT uiParams )
          }
       }
 
-#ifdef __PROFILER__
       if( bProfiler )
       {
          hb_mthAddTime( pMethod, clock() - ulClock );
       }
-#endif
 
       // Constructor must ALWAYS return Self.
       if( bConstructor )
@@ -6877,7 +6854,6 @@ HB_FUNC( __VMVARGLIST )
    hb_itemRelease( pGlobals );
 }
 
-#ifdef __PROFILER__
 /* $Doc$
  * $FuncName$     __SETPROFILER( <lOnOff> ) --> <lOldValue>
  * $Description$  Turns on | off the profiler activity
@@ -6891,7 +6867,6 @@ HB_FUNC( __SETPROFILER )
 
    hb_retl( bOldValue );
 }
-#endif
 
 /* $Doc$
  * $FuncName$     __TRACEPRGCALLS( <lOnOff> ) --> <lOldValue>
@@ -7311,8 +7286,6 @@ HB_FUNC( HB_QSELF )
    hb_itemCopy( &(HB_VM_STACK.Return), *( pBase + 1 ) );
 }
 
-#ifdef __PROFILER__
-
 HB_FUNC( __OPCOUNT ) /* it returns the total amount of opcodes */
 {
    HB_THREAD_STUB
@@ -7336,8 +7309,6 @@ HB_FUNC( __OPGETPRF ) /* profiler: It returns an array with an opcode called and
       hb_stornl( hb_ulOpcodesTime[ ulOpcode ],  -1, 2 );
    }
 }
-
-#endif
 
 HB_FUNC( HB_SAVEBLOCK )
 {
